--- a/lsys-app/Cargo.toml
+++ b/lsys-app/Cargo.toml
@@ -13,12 +13,13 @@ futures-util="0.3.*"
 serde={ version = "1.0.*"}
 serde_json="1.0.*"
 
-
-tokio = {version="~1.25.0"}
+tokio = {version="~1.25"}
+deadpool-redis = { version = "0.11" }
+redis = { version = "~0.22"  }
 
 #db
 sqlx = {version = "0.6.1",features = [ "mysql","runtime-tokio-native-tls","offline"]}
-sqlx-model = {version = "0.1.3", default-features=false,features = [ "sqlx-mysql"]}
+sqlx-model = {version = "0.2.0", default-features=false,features = [ "sqlx-mysql"]}
 
 
 #日志
@@ -31,7 +32,6 @@ fluent = "0.16.0"
 
 
 captcha = "0.0.9"
-redis = { version = "~0.22.1", features = ["tokio-comp","connection-manager"] }
 
 async-trait = "0.1.57"
 
