--- a/lsys-rbac/Cargo.toml
+++ b/lsys-rbac/Cargo.toml
@@ -7,15 +7,14 @@ edition = "2021"
 
 [dependencies]
 
-redis = { version = "~0.22.1", features = ["tokio-comp","connection-manager"] }
-
 lsys-core = { version = "~0.0.*", path = "../lsys-core"}
 sqlx = {version = "~0.6.*",features = [ "mysql","runtime-tokio-native-tls","offline"]}
-sqlx-model = {version = "~0.1.3", default-features=false,features = ["sqlx-mysql"]}
+sqlx-model = {version = "~0.2.0", default-features=false,features = ["sqlx-mysql"]}
 
 
-tokio = {version="~1.25.0", features = ["macros"]}
-
+tokio = {version="~1.25", features = ["macros"]}
+deadpool-redis = { version = "0.11" }
+redis = { version = "~0.22"  }
 
 serde={ version = "1.0.*" }
 serde_json="1.0.*"
