--- a/lsys-user/Cargo.toml
+++ b/lsys-user/Cargo.toml
@@ -6,15 +6,16 @@ edition = "2021"
 
 
 [dependencies]
-redis = { version = "~0.22.1", features = ["tokio-comp","connection-manager"] }
+tokio = {version="~1.25"}
+deadpool-redis = { version = "0.11" }
+redis = { version = "~0.22"  }
 
 lsys-core = { version = "~0.0.*", path = "../lsys-core"}
 sqlx = {version = "~0.6.*",features = [ "mysql","runtime-tokio-native-tls","offline"]}
-sqlx-model = {version = "~0.1.3", default-features=false,features = ["sqlx-mysql"]}
+sqlx-model = {version = "~0.2.0", default-features=false,features = ["sqlx-mysql"]}
 
 async-trait = "~0.1.*"
 
-tokio = {version="~1.25.0"}
 
 serde={ version = "1.0.*" }
 serde_json="1.0.*"
