--- a/examples/lsys-actix-web/.env
+++ b/examples/lsys-actix-web/.env
@@ -1,6 +1,6 @@
 APP_HOST=127.0.0.1
 APP_PORT=8080
-LOG_LEVEL=sqlx_core=info,axtix_web=debug,actix=info,mio=error,lsys_user=trace,lsys_web=trace,lsys_core=trace,lsys_user=trace,lsys_rbac=trace,lsys_actix_web=trace,sqlx=trace,redis=debug
+LOG_LEVEL=sqlx_core=info,lsys_sender=debug,axtix_web=debug,actix=info,mio=error,lsys_user=trace,lsys_web=trace,lsys_core=trace,lsys_user=trace,lsys_rbac=trace,lsys_actix_web=trace,sqlx=trace,redis=debug
 LOG_DIR="logs"
 LOG_NAME="std::out"
 #LOG_GELF="127.0.0.1:12201"
