--- a/lsys-sender/Cargo.toml
+++ b/lsys-sender/Cargo.toml
@@ -15,7 +15,7 @@ serde_json="1.0.*"
 
 tokio = {version="~1.25"}
 deadpool-redis = { version = "0.11" }
-redis = { version = "~0.22"  }
+redis = { version = "~0.22" ,features=["tokio-comp","connection-manager"] }
 
 sqlx = {version = "~0.6.*",features = [ "mysql","runtime-tokio-native-tls","offline"]}
 sqlx-model = {version = "~0.2.0", default-features=false,features = ["sqlx-mysql"]}
