--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,6 +17,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build
+      working-directory: ./server
       run: cargo build --verbose
     - name: Run tests
-      run: cargo test --verbose
+      working-directory: ./server
+      run:  cargo test --verbose
