--- a/ui/web/package.json
+++ b/ui/web/package.json
@@ -11,6 +11,7 @@
   "author": "shan.liu@msn.com",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.19.1",
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^8.2.5",
@@ -28,7 +29,6 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
-    "@babel/core": "^7.20.12",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.9",
@@ -37,11 +37,7 @@
     "@mui/x-date-pickers": "^5.0.10",
     "axios": "^1.1.3",
     "dayjs": "^1.11.6",
-    "is-valid-domain": "^0.1.6",
     "json-bigint": "^1.0.0",
-    "jsonwebtoken": "^8.5.1",
-    "node-polyfill-webpack-plugin": "^2.0.1",
-    "prop-types": "^15.8.1",
     "qrcode": "^1.5.1",
     "random-string": "^0.2.0",
     "react": "^18.0.0",
@@ -50,6 +46,8 @@
     "react-router-dom": "^6.3.0",
     "store2": "^2.14.2",
     "usehooks-ts": "^2.9.1",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "prop-types": "^15.8.1",
+    "crypto-js": "^4.1.1"
   }
 }
