--- a/server/lsys-app/Cargo.toml
+++ b/server/lsys-app/Cargo.toml
@@ -18,7 +18,7 @@ deadpool-redis = { version = "0.11" }
 redis = { version = "~0.22"  }
 
 #db
-sqlx = {version = "0.6.1",features = [ "mysql","runtime-tokio-native-tls","offline"]}
+sqlx = {version = "~0.6.3",features = [ "mysql","runtime-tokio-native-tls","offline"]}
 sqlx-model = {version = "0.2.0", default-features=false,features = [ "sqlx-mysql"]}
 
 
