--- a/server/lsys-rbac/Cargo.toml
+++ b/server/lsys-rbac/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 
 lsys-core = { version = "~0.0.*", path = "../lsys-core"}
-sqlx = {version = "~0.6.*",features = [ "mysql","runtime-tokio-native-tls","offline"]}
+sqlx = {version = "~0.6.3",features = [ "mysql","runtime-tokio-native-tls","offline"]}
 sqlx-model = {version = "~0.2.0", default-features=false,features = ["sqlx-mysql"]}
 
 
