--- a/server/lsys-sender/Cargo.toml
+++ b/server/lsys-sender/Cargo.toml
@@ -14,7 +14,7 @@ tokio = {version="~1.27"}
 deadpool-redis = { version = "0.11" }
 redis = { version = "~0.22",features=[ "tokio-comp","connection-manager" ] }
 
-sqlx = {version = "~0.6.*",features = [ "mysql","runtime-tokio-native-tls","offline"]}
+sqlx = {version = "~0.6.3",features = [ "mysql","runtime-tokio-native-tls","offline"]}
 sqlx-model = {version = "~0.2.0", default-features=false,features = ["sqlx-mysql"]}
 
 # mail send
