--- a/server/lsys-user/Cargo.toml
+++ b/server/lsys-user/Cargo.toml
@@ -11,7 +11,7 @@ deadpool-redis = { version = "0.11" }
 redis = { version = "~0.22"  }
 
 lsys-core = { version = "~0.0.*", path = "../lsys-core"}
-sqlx = {version = "~0.6.*",features = [ "mysql","runtime-tokio-native-tls","offline"]}
+sqlx = {version = "~0.6.3",features = [ "mysql","runtime-tokio-native-tls","offline"]}
 sqlx-model = {version = "~0.2.0", default-features=false,features = ["sqlx-mysql"]}
 
 async-trait = "~0.1.*"
