--- a/server/lsys-setting/Cargo.toml
+++ b/server/lsys-setting/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "lsys-sender"
+name = "lsys-setting"
 version = "0.0.1"
 authors = ["liushan <shan.liu@msn.com>"]
 edition = "2021"
@@ -7,27 +7,13 @@ edition = "2021"
 
 [dependencies]
 lsys-core = { version = "0.0.1", path = "../lsys-core"}#path 替换为 :,git = "https://github.com/shanliu/lsys"
-lsys-setting = { version = "0.0.1", path = "../lsys-setting"}#path 替换为 :,git = "https://github.com/shanliu/lsys"
 serde={ version = "1.0.*"}
 serde_json="1.0.*"
 
 tokio = {version="~1.27"}
-deadpool-redis = { version = "0.11" }
-redis = { version = "~0.22",features=[ "tokio-comp","connection-manager" ] }
 
 sqlx = {version = "~0.6.3",features = [ "mysql","runtime-tokio-native-tls","offline"]}
 sqlx-model = {version = "~0.2.0", default-features=false,features = ["sqlx-mysql"]}
-
-# mail send
-lettre ={ version = "0.10.1", features = [ "smtp-transport","native-tls", "tokio1","tokio1-native-tls", "builder"] } 
-
-# sms send
-sms = "0.1.8"
-
-hostname = "~0.3.*"
-
-
-config = "0.13.2"
 
 #日志
 tracing = {version="0.1.*",features=["log"]}# log-always 保持log的输出 当使用tracing时会出现两次
@@ -38,15 +24,9 @@ tracing-appender="0.2.2"#写日志文件
 tracing-serde ="0.1.3"#可序列化变量赋值
 tracing-subscriber = {version="0.3.11",features=["env-filter"]}
 
-#模板
-tera = "1.17.0"
 
 async-trait = "~0.1.*"
 
-num_cpus="1.15.0"
+deadpool-redis = { version = "0.11" }
+redis = { version = "~0.22"  }
 
-
-rs-snowflake = "0.6.0"
-crc32fast = "1.3.2"
-
-parking_lot = "~0.12.*"
