--- a/server/examples/lsys-actix-web/Cargo.toml
+++ b/server/examples/lsys-actix-web/Cargo.toml
@@ -29,14 +29,14 @@ actix-files = "~0.6.0"
 actix-web-actors = "4.1.0"
 
 
-pin-project = "~1.0.*"
+pin-project = "~1.1.*"
 
 
 jsonwebtoken  = "~8.3.0"
 serde={ version = "~1.0.*"}
 serde_json="~1.0.*"
 serde_urlencoded="~0.7"
-form_urlencoded = "~1.1.0"
+form_urlencoded = "~1.2.0"
 tera = "~1.18.0"
 
 
@@ -56,6 +56,11 @@ md5 = "~0.7.0"
 mime = "~0.3.16"
 nanoid = "~0.4.0"
 
+
+#tokio 任务查看
+#tokio = {version="~1.28",features=["full","tracing"]}
+#tokio-console = "0.1.9"
+#console-subscriber = "0.1.10"
 
 
 #[profile.release]
