--- a/ui/web/package.json
+++ b/ui/web/package.json
@@ -48,6 +48,8 @@
     "react-dom": "^18.0.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
+    "react-toc2": "^3.1.1",
+    "starback": "^2.1.4",
     "store2": "^2.14.2",
     "usehooks-ts": "^2.9.1",
     "validator": "^13.7.0"
