--- a/server/lsys-web/Cargo.toml
+++ b/server/lsys-web/Cargo.toml
@@ -6,8 +6,9 @@ edition = "2021"
 
 
 [dependencies]
-area-db = { version = "~0.0.20", default-features = false, features = [
+area-db = { version = "~0.1.*", default-features = false, features = [
     "data-csv",
+    "index-disk",
 ] }
 lsys-core = { version = "0.0.1", path = "../lsys-core" } #path 替换为 :,git = "https://github.com/shanliu/lsys"
 lsys-rbac = { version = "0.0.1", path = "../lsys-rbac" } #path 替换为 :,git = "https://github.com/shanliu/lsys"
