--- a/server/examples/lsys-web-module-oauth/Cargo.toml
+++ b/server/examples/lsys-web-module-oauth/Cargo.toml
@@ -6,11 +6,11 @@ edition = "2021"
 
 
 [dependencies]
-lsys-core = { version = "0.0.1", path = "../../lsys-core"}#path 替换为 :,git = "https://github.com/shanliu/lsys"
-lsys-web = { version = "0.0.1", path = "../../lsys-web"}#path 替换为 :,git = "https://github.com/shanliu/lsys"
-lsys-setting = { version = "0.0.1", path = "../../lsys-setting"}#path 替换为 :,git = "https://github.com/shanliu/lsys"
-lsys-rbac = { version = "0.0.1", path = "../../lsys-rbac"}#path 替换为 :,git = "https://github.com/shanliu/lsys"
-lsys-user = { version = "0.0.1", path = "../../lsys-user"}#path 替换为 :,git = "https://github.com/shanliu/lsys"
+lsys-core = {  path = "../../lsys-core"}#path 替换为 :,git = "https://github.com/shanliu/lsys"
+lsys-web = {  path = "../../lsys-web"}#path 替换为 :,git = "https://github.com/shanliu/lsys"
+lsys-setting = {  path = "../../lsys-setting"}#path 替换为 :,git = "https://github.com/shanliu/lsys"
+lsys-rbac = {  path = "../../lsys-rbac"}#path 替换为 :,git = "https://github.com/shanliu/lsys"
+lsys-user = {  path = "../../lsys-user"}#path 替换为 :,git = "https://github.com/shanliu/lsys"
 serde={ version = "1.0.*"}
 serde_json="1.0.*"
 #日志
