--- a/server/lsys-app/Cargo.toml
+++ b/server/lsys-app/Cargo.toml
@@ -6,9 +6,9 @@ edition = "2021"
 
 
 [dependencies]
-lsys-core = { version = "0.0.1", path = "../lsys-core"}
-lsys-user = { version = "0.0.1", path = "../lsys-user"}# OAUTH登录相关实现依赖
-lsys-logger = { version = "0.0.1", path = "../lsys-logger"}#path 替换为 :,git = "https://github.com/shanliu/lsys"
+lsys-core = { path = "../lsys-core"}
+lsys-user = {  path = "../lsys-user"}# OAUTH登录相关实现依赖
+lsys-logger = {  path = "../lsys-logger"}#path 替换为 :,git = "https://github.com/shanliu/lsys"
 
 serde={ version = "1.0.*"}
 serde_json="1.0.*"
