--- a/server/lsys-web/Cargo.toml
+++ b/server/lsys-web/Cargo.toml
@@ -6,18 +6,18 @@ edition = "2021"
 
 
 [dependencies]
-area-db = { version = "~0.1.*", default-features = false, features = [
+area-db = { version = "~0.1.1", default-features = false, features = [
     "data-csv",
     "index-disk",
 ] }
-lsys-core = { version = "0.0.1", path = "../lsys-core" } #path 替换为 :,git = "https://github.com/shanliu/lsys"
-lsys-rbac = { version = "0.0.1", path = "../lsys-rbac" } #path 替换为 :,git = "https://github.com/shanliu/lsys"
-lsys-user = { version = "0.0.1", path = "../lsys-user" } #path 替换为 :,git = "https://github.com/shanliu/lsys"
-lsys-app = { version = "0.0.1", path = "../lsys-app" } #path 替换为 :,git = "https://github.com/shanliu/lsys"
-lsys-sender = { version = "0.0.1", path = "../lsys-sender" } #path 替换为 :,git = "https://github.com/shanliu/lsys"
-lsys-setting = { version = "0.0.1", path = "../lsys-setting" } #path 替换为 :,git = "https://github.com/shanliu/lsys"
-lsys-logger = { version = "0.0.1", path = "../lsys-logger" } #path 替换为 :,git = "https://github.com/shanliu/lsys"
-lsys-docs = { version = "0.0.1", path = "../lsys-docs" } #path 替换为 :,git = "https://github.com/shanliu/lsys"
+lsys-core = {  path = "../lsys-core" } #path 替换为 :,git = "https://github.com/shanliu/lsys"
+lsys-rbac = {  path = "../lsys-rbac" } #path 替换为 :,git = "https://github.com/shanliu/lsys"
+lsys-user = {  path = "../lsys-user" } #path 替换为 :,git = "https://github.com/shanliu/lsys"
+lsys-app = {  path = "../lsys-app" } #path 替换为 :,git = "https://github.com/shanliu/lsys"
+lsys-sender = { path = "../lsys-sender" } #path 替换为 :,git = "https://github.com/shanliu/lsys"
+lsys-setting = { path = "../lsys-setting" } #path 替换为 :,git = "https://github.com/shanliu/lsys"
+lsys-logger = { path = "../lsys-logger" } #path 替换为 :,git = "https://github.com/shanliu/lsys"
+lsys-docs = {  path = "../lsys-docs" } #path 替换为 :,git = "https://github.com/shanliu/lsys"
 pin-project = "1.1.*"
 futures-util = "0.3.*"
 serde = { version = "1.0.*" }
