--- a/server/examples/lsys-web-module-oauth/Cargo.toml
+++ b/server/examples/lsys-web-module-oauth/Cargo.toml
@@ -6,28 +6,35 @@ edition = "2021"
 
 
 [dependencies]
-lsys-core = {  path = "../../lsys-core"}#path 替换为 :,git = "https://github.com/shanliu/lsys"
-lsys-web = {  path = "../../lsys-web"}#path 替换为 :,git = "https://github.com/shanliu/lsys"
-lsys-setting = {  path = "../../lsys-setting"}#path 替换为 :,git = "https://github.com/shanliu/lsys"
-lsys-rbac = {  path = "../../lsys-rbac"}#path 替换为 :,git = "https://github.com/shanliu/lsys"
-lsys-user = {  path = "../../lsys-user"}#path 替换为 :,git = "https://github.com/shanliu/lsys"
-serde={ version = "1.0.*"}
-serde_json="1.0.*"
+lsys-core = { path = "../../lsys-core" }       #path 替换为 :,git = "https://github.com/shanliu/lsys"
+lsys-web = { path = "../../lsys-web" }         #path 替换为 :,git = "https://github.com/shanliu/lsys"
+lsys-setting = { path = "../../lsys-setting" } #path 替换为 :,git = "https://github.com/shanliu/lsys"
+lsys-rbac = { path = "../../lsys-rbac" }       #path 替换为 :,git = "https://github.com/shanliu/lsys"
+lsys-user = { path = "../../lsys-user" }       #path 替换为 :,git = "https://github.com/shanliu/lsys"
+serde = { version = "1.0.*" }
+serde_json = "1.0.*"
 #日志
-tracing = {version="0.1.*",features=["log"]}# log-always 保持log的输出 当使用tracing时会出现两次
+tracing = { version = "0.1.*", features = [
+    "log",
+] } # log-always 保持log的输出 当使用tracing时会出现两次
 async-trait = "0.1.57"
 config = "0.13.2"
 
 
-
-redis = { version = "~0.23"  }
-
-
-urlencoding = { version = "2.1.0"  }
+redis = { version = "~0.23" }
 
 
-reqwest = { version = "~0.11.*", features = ["json","stream"] }
+urlencoding = { version = "2.1.0" }
 
 
-sqlx = {version = "~0.6.3",features = [ "mysql","runtime-tokio-native-tls","offline"]}
-sqlx-model = {version = "~0.2.0", default-features=false,features = ["sqlx-mysql"]}
+reqwest = { version = "~0.11.*", features = ["json", "stream"] }
+
+
+sqlx = { version = "~0.6.3", features = [
+    "mysql",
+    "runtime-tokio-native-tls",
+    "offline",
+] }
+sqlx-model = { version = "0.2.0", default-features = false, features = [
+    "sqlx-mysql",
+] }
