--- a/server/lsys-web/Cargo.toml
+++ b/server/lsys-web/Cargo.toml
@@ -49,7 +49,7 @@ sqlx = { version = "~0.6.3", features = [
     "runtime-tokio-native-tls",
     "offline",
 ] }
-sqlx-model = { version = "0.2.0", default-features = false, features = [
+sqlx-model = { version = "=0.2.0", default-features = false, features = [
     "sqlx-mysql",
 ] }
 # simple_asn1 = "0.6.2"
