--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,23 +2,29 @@ name: Rust
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
+    services:
+      redis:
+        image: redis
+        ports:
+          - 6379:6379
+        options: --entrypoint redis-server
+
     steps:
-    - uses: actions/checkout@v3
-    - name: Build
-      working-directory: ./server
-      run: cargo build --verbose
-    - name: Run tests
-      working-directory: ./server
-      run:  cargo test --verbose
+      - uses: actions/checkout@v3
+      - name: Build
+        working-directory: ./server
+        run: cargo build --verbose
+      - name: Run tests
+        working-directory: ./server
+        run: cargo test --verbose
