--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -23,13 +23,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
 
     - name: Build-web
-      working-directory: ./ui/web
-      run: |
-        npm install
-        npx webpack
-        
-    - name: Build-wap
-      working-directory: ./ui/wap
+      working-directory: ./ui
       run: |
         npm install
         npx webpack
