--- a/.github/workflows/rust_clippy.yml
+++ b/.github/workflows/rust_clippy.yml
@@ -52,5 +52,5 @@ jobs:
       - name: Upload analysis results to GitHub
         uses: github/codeql-action/upload-sarif@v1
         with:
-          sarif_file: rust-clippy-results.sarif
+          sarif_file: ./server/rust-clippy-results.sarif
           wait-for-processing: true
