--- a/ui/package.json
+++ b/ui/package.json
@@ -16,8 +16,8 @@
     "@babel/preset-env": "^7.19.1",
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^8.2.5",
-    "css-loader": "^6.7.1",
     "copy-webpack-plugin": "^12.0.2",
+    "css-loader": "^6.7.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5",
     "postcss-less": "^6.0.0",
@@ -43,7 +43,8 @@
     "axios": "^1.1.3",
     "dayjs": "^1.11.6",
     "json-bigint": "^1.0.0",
-    "mermaid": "10.4.0",
+    "mermaid": "10.9.0",
+    "mui-color-input": "^2.0.3",
     "prop-types": "^15.8.1",
     "qrcode": "^1.5.1",
     "random-string": "^0.2.0",
