--- a/server/lsys-lib-sms/Cargo.toml
+++ b/server/lsys-lib-sms/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lsys-lib-sms"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 authors = ["liushan <shan.liu@msn.com>"]
 license-file = "LICENSE"
@@ -27,7 +27,7 @@ reqwest = { version = "~0.11.22" }
 
 
 [dev-dependencies]
-tokio = { version = "~1.36", features = ["test-util"] }
+tokio = { version = "~1.36", features = ["test-util","full"] }
 
 [features]
 default = ["aliyun", "huawei", "tencent", "jdcloud", "netease", "cloopen"]
