--- a/server/lsys-app/Cargo.toml
+++ b/server/lsys-app/Cargo.toml
@@ -16,10 +16,8 @@ serde_json = "1.0.*"
 deadpool-redis = { version = "~0.20.0" }
 redis = { version = "~0.29.0" }
 
-#db
 sqlx = { version = "~0.8.3", features = ["mysql", "runtime-tokio-native-tls"] }
 
-#日志
 tracing = { version = "0.1.*" } # log-always 保持log的输出 当使用tracing时会出现两次
 
 
@@ -28,5 +26,11 @@ async-trait = "0.1.57"
 regex = "~1.11.1"
 
 
-# rand = "~0.8.0"
 md5 = "0.7.0"
+
+
+# notify 
+chrono = { version = "~0.4.31" }
+url = "2.5.0"
+reqwest = { version = "~0.12.9", features = ["stream"] }
+futures = "0.3"
