--- a/server/lsys-core/Cargo.toml
+++ b/server/lsys-core/Cargo.toml
@@ -10,7 +10,7 @@ lsys-core-macros = { path = "../lsys-core-macros" }
 futures-util = "~0.3.31"
 dotenv = "~0.15.*"
 
-tokio = { version = "~1.44.0", features = ["fs", "macros"] }
+tokio = { version = "~1.45.0", features = ["fs", "macros"] }
 deadpool-redis = { version = "~0.20.0" }
 redis = { version = "~0.29.0", features = [ # 根据 deadpool-redis 的版本适配 
     "aio",
@@ -23,7 +23,7 @@ serde = { version = "~1.0.*" }
 serde_json = "~1.0.*"
 
 #db
-sqlx = { version = "~0.8.3", features = ["runtime-tokio-native-tls"] }
+sqlx = { version = "~0.8.3", features = ["runtime-tokio-native-tls", "mysql"] }
 #sqlx-model = { version = "0.2.3", default-features = false }
 log = "~0.4.*"
 
