--- a/server/lsys-web/Cargo.toml
+++ b/server/lsys-web/Cargo.toml
@@ -27,7 +27,7 @@ sqlx = { version = "~0.8.6", features = ["mysql", "runtime-tokio-native-tls"] }
 
 #客户端
 reqwest = { version = "~0.12.9", features = ["json", "stream"] }
-
+chrono = { version = "~0.4.31" }
 serde_urlencoded = "0.7"
 
 #日志
