--- a/server/lsys-app-sender/Cargo.toml
+++ b/server/lsys-app-sender/Cargo.toml
@@ -35,7 +35,7 @@ sqlx-model = { version = "0.2.3", default-features = false, features = [
 ] }
 
 # mail send
-lettre = { version = "~0.11", features = [
+lettre = { version = "0.10.4", features = [
     "smtp-transport",
     "native-tls",
     "tokio1",
