--- a/server/examples/lsys-actix-web/config/app.toml
+++ b/server/examples/lsys-actix-web/config/app.toml
@@ -27,6 +27,10 @@ ui_dir = "../../../ui/public/"
 #静态文件访问路径,默认:/ui/
 #ui_path="/ui/"
 ui_path = "/"
+#404页面渲染ui首页
+ui_404_file = "app.html"
+ui_404_code = 200
+
 #超级管理员id,user表id
 root_user_id = [1]
 
